prevent changing the grid once search behinds and fix a bug

--- a/src/components/Node/Node.css
+++ b/src/components/Node/Node.css
@@ -13,6 +13,7 @@
 .Node-start,
 .Node-end {
 	background-repeat: no-repeat;
+	cursor: grab;
 }
 
 .Node-visited {
